# SFMLGame

./: CMakeLists.txt
assets/config/: window.ini
cmake_modules/: FindSFML.cmake
headers/: Game.h  stdafx.h
headers/Components/: AnimationComponent.h  HitboxComponent.h  MovementComponent.h
headers/Entities/: Entity.h  Player.h
headers/GUI/: Button.h  GraphicsSettings.h  Gui.h  PauseMenu.h
headers/Map/: TileMap.h
headers/States/: EditorState.h  GameState.h  MainMenuState.h  SettingsState.h  State.h
headers/Tile/: Tile.h
src/: Game.cpp
src/Components/: AnimationComponent.cpp  HitboxComponent.cpp  MovementComponent.cpp
src/Entities/: Entity.cpp  Player.cpp
src/GUI/: Button.cpp  GraphicsSettings.cpp  Gui.cpp  PauseMenu.cpp
src/Map/: TileMap.cpp
src/States/: EditorState.cpp  GameState.cpp  MainMenuState.cpp  SettingsState.cpp  State.cpp
src/Tile/: Tile.cpp
